--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
 	head
 		meta(charset='UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		title Test
+		title eye - Cloudflare Images Relay
 		style
 			!= css
 	body.w-full.h-screen.flex.flex-col.justify-center.items-center.gap-2.bg-neutral-800.text-neutral-100
