build: upgrade to Hono v3, pagery 0.2.2

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html(lang='en')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title eye - Cloudflare Images Relay
 		style
-			!= css
+			!= css.tailwind
 	body.w-full.h-screen.flex.flex-col.justify-center.items-center.gap-2.bg-neutral-800.text-neutral-100
 		h1.text-5xl.font-bold.mb-8 eye
 		p.text-2xl #[strong eye] is a relay server for my Cloudflare Images.
